# libs/dto/src/lib/auth/login.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger'
+import { IsNotEmpty } from 'class-validator'
+
+export class LoginDto {
+  @ApiProperty({
+    example: 'tt@tt.tt',
+  })
+  @IsNotEmpty()
+  email = ''
+
+  @ApiProperty({
+    example: '123456',
+  })
+  @IsNotEmpty()
+  password = ''
+}
