# libs/dto/src/lib/login/login.dto.ts
@@ -1,4 +1,0 @@
-export interface LoginDto {
-  readonly email: string
-  readonly password: string
-}
